--- a/css/tailwind/src/css/pagebuilder/_pageBuilderAdmin.scss
+++ b/css/tailwind/src/css/pagebuilder/_pageBuilderAdmin.scss
@@ -140,6 +140,7 @@ body[data-siteBuilder] > .js{
   --tw-bg-opacity: 0.6!important;
 }
 .filter-switch-item label svg{
-	max-height: 25px;
+	max-height: 20px;
+	margin: 0 auto;
 }
 
